--- a/ajustes_de_curvas/Lista - ajustes de curvas.ipynb
+++ b/ajustes_de_curvas/Lista - ajustes de curvas.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "bbf7c387",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "%matplotlib widget\n",
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -25,10 +25,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import display, Markdown\n",
-    "\n",
-    "currentdir = os.path.dirname(os.path.abspath(inspect.getfile(inspect.currentframe())))\n",
-    "parentdir = os.path.dirname(currentdir)\n",
-    "sys.path.insert(0, parentdir)\n",
     "\n",
     "import adjust\n",
     "import interpolacao.div_diff as div_diff"
@@ -1354,7 +1350,6 @@
     "coef_adj = adjust.solve_normal_eq(A,B)\n",
     "print(coef_adj)\n",
     "\n",
-    "%matplotlib notebook\n",
     "x_pred = np.linspace(0,1,10)\n",
     "y_pred = np.linspace(0,1,10)\n",
     "xx_pred, yy_pred = np.meshgrid(x_pred, y_pred)\n",
