--- a/ajustes_de_curvas/Linearização.ipynb
+++ b/ajustes_de_curvas/Linearização.ipynb
@@ -23,17 +23,11 @@
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "import sys, os, inspect\n",
-    "currentdir = os.path.dirname(os.path.abspath(inspect.getfile(inspect.currentframe())))\n",
-    "parentdir = os.path.dirname(currentdir)\n",
-    "sys.path.insert(0, parentdir)\n",
-    "\n",
     "import plot\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "import adjust\n",
-    "import sistemas_lineares.linsys as linsys"
+    "import linsys"
    ]
   },
   {
